[gd_scene load_steps=4 format=3 uid="uid://dc388hkklqvvc"]

[ext_resource type="Theme" uid="uid://cb2tqos08yhkd" path="res://interface/theme/MinimalUI/MinimalUI.tres" id="1_0ajpt"]
[ext_resource type="Script" path="res://interface/menus/main/main_menu.gd" id="1_tievw"]
[ext_resource type="PackedScene" uid="uid://603k3vy4p3f1" path="res://interface/menus/main/settings/main_menu_settings.tscn" id="3_dt7l5"]

[node name="MainMenu" type="CanvasLayer"]

[node name="MenuView" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_tievw")

[node name="ColorRect" type="ColorRect" parent="MenuView"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MenuView"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MenuView/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("1_0ajpt")
theme_override_font_sizes/font_size = 50
text = "Aikami"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="MenuView/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MenuView/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StartButton" type="Button" parent="MenuView/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("1_0ajpt")
theme_override_font_sizes/font_size = 24
text = "Start"

[node name="ResetButton" type="Button" parent="MenuView/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("1_0ajpt")
theme_override_font_sizes/font_size = 24
text = "Reset"

[node name="OptionButton" type="Button" parent="MenuView/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
focus_neighbor_bottom = NodePath("../QuitButton")
theme = ExtResource("1_0ajpt")
theme_override_font_sizes/font_size = 24
text = "Option"

[node name="QuitButton" type="Button" parent="MenuView/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
focus_neighbor_top = NodePath("../OptionButton")
theme = ExtResource("1_0ajpt")
theme_override_font_sizes/font_size = 24
text = "Quit
"

[node name="SettingsView" parent="." instance=ExtResource("3_dt7l5")]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="MenuView/VBoxContainer/VBoxContainer/StartButton" to="MenuView" method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuView/VBoxContainer/VBoxContainer/ResetButton" to="MenuView" method="_on_reset_button_pressed"]
[connection signal="pressed" from="MenuView/VBoxContainer/VBoxContainer/OptionButton" to="MenuView" method="_on_option_button_pressed"]
[connection signal="pressed" from="MenuView/VBoxContainer/VBoxContainer/QuitButton" to="MenuView" method="_on_quit_button_pressed"]
[connection signal="back_button_pressed" from="SettingsView" to="MenuView" method="_on_settings_view_back_button_pressed"]
